--- a/src/styles/layout.module.css
+++ b/src/styles/layout.module.css
@@ -2,12 +2,13 @@
 
 .contact,
 .contactBg {
-  margin-top: 70px;
-  height: 80vh;
+  /* margin-top: 70px; */
+  /* height: 80vh; */
 }
 
 .contact {
   position: relative;
+  height: 100vh;
   padding-left: 50% !important;
 }
 
@@ -16,14 +17,15 @@
   font-family: "Montserrat", sans-serif;
   font-size: 36px;
   padding-top: 70px;
-  background-size: 100vw;
+  background-size: 200vw;
   background-repeat: no-repeat;
   width: 100vw;
   left: 0px;
-  overflow: hidden;
+  height: 120vh;
+  /* overflow: hidden; */
   position: absolute;
   white-space: nowrap;
-  bottom: -4px !important;
+  /* bottom: -4px !important; */
   z-index: -9;
 }
 .header {
@@ -87,30 +89,17 @@
   font-family: "Montserrat", sans-serif;
   font-size: 36px;
 
-  padding-left: 0;
-  background-size: 103vw;
-  background-repeat: no-repeat;
-  width: 100vw;
-  height: calc(100vh - 126px);
-  background-position-x: -7px;
-  background-position-y: -54px;
-  overflow: hidden;
-  margin-top: 64px;
-  display: flex;
-  padding: 0 12%;
-  padding-top: 110px;
-
   font-family: "Montserrat", sans-serif;
   font-size: 36px;
   padding-left: 0;
-  background-size: 103vw;
+  background-size: cover;
   background-repeat: no-repeat;
   width: 100vw;
-  height: calc(100vh - 126px);
+  height: 100vh;
   background-position-x: -7px;
   background-position-y: -54px;
   overflow: hidden;
-  margin-top: 64px;
+  margin-top: 94px;
   display: flex;
   padding: 0 10%;
   padding-top: 110px;
@@ -406,14 +395,14 @@ button:hover,
     font-family: "Montserrat", sans-serif;
     /* font-size: 36px; */
 
-    background-size: 110vw;
+    background-size: 130vw;
     /* background-repeat: no-repeat;  */
     width: 100vw;
-    height: calc(100vh - 60px);
+    height: 100vh;
     background-position-x: 0px;
     background-position-y: 0px;
     /* overflow: hidden; */
-    /* margin-top: 51px; */
+    margin-top: 58px;
     display: flex;
     padding: 0 8%;
     padding-top: 70px;
@@ -453,8 +442,24 @@ button:hover,
   .whatWeDo {
     padding-top: 90px;
   }
+
+  .whoWeAre {
+    height: 100vh;
+  }
   .whoWeAre {
     padding-top: 180px;
+  }
+
+  .contact {
+    height: 145vh;
+    margin-top: 0;
+    padding-top: 0;
+    margin-bottom: -190px !important;
+  }
+
+  .footer {
+    height: 30vh;
+    margin-top: 20px;
   }
 }
 
